test/preprocessor/invalid/missing-endif.glsl
#ifdef TEST1
#else
    #ifdef TEST2
